# serializer version: 1
# name: test_accuracy_rrr[perturbed-case_1_even_5x4x5-SGLD]
  -950.279052734375
# ---
# name: test_accuracy_rrr[perturbed-case_1_even_5x4x5-sgld]
  -950.279052734375
# ---
# name: test_accuracy_rrr[perturbed-case_1_odd_5x3x5-SGLD]
  -540.136474609375
# ---
# name: test_accuracy_rrr[perturbed-case_1_odd_5x3x5-sgld]
  -540.136474609375
# ---
# name: test_accuracy_rrr[perturbed-case_2_4x3x8-SGLD]
  -428.4161071777344
# ---
# name: test_accuracy_rrr[perturbed-case_2_4x3x8-sgld]
  -428.4161071777344
# ---
# name: test_accuracy_rrr[perturbed-case_3_8x3x4-SGLD]
  -1717.2952880859375
# ---
# name: test_accuracy_rrr[perturbed-case_3_8x3x4-sgld]
  -1717.2952880859375
# ---
# name: test_accuracy_rrr[perturbed-case_4_3x8x4-SGLD]
  -5700.07275390625
# ---
# name: test_accuracy_rrr[perturbed-case_4_3x8x4-sgld]
  -5700.07275390625
# ---
# name: test_accuracy_rrr[unperturbed-case_1_even_5x4x5-SGLD]
  0.36638423800468445
# ---
# name: test_accuracy_rrr[unperturbed-case_1_even_5x4x5-sgld]
  0.36638423800468445
# ---
# name: test_accuracy_rrr[unperturbed-case_1_odd_5x3x5-SGLD]
  0.3891811668872833
# ---
# name: test_accuracy_rrr[unperturbed-case_1_odd_5x3x5-sgld]
  0.3891811668872833
# ---
# name: test_accuracy_rrr[unperturbed-case_2_4x3x8-SGLD]
  0.13740848004817963
# ---
# name: test_accuracy_rrr[unperturbed-case_2_4x3x8-sgld]
  0.13740848004817963
# ---
# name: test_accuracy_rrr[unperturbed-case_3_8x3x4-SGLD]
  0.4877088963985443
# ---
# name: test_accuracy_rrr[unperturbed-case_3_8x3x4-sgld]
  0.4877088963985443
# ---
# name: test_accuracy_rrr[unperturbed-case_4_3x8x4-SGLD]
  0.4049715995788574
# ---
# name: test_accuracy_rrr[unperturbed-case_4_3x8x4-sgld]
  0.4049715995788574
# ---
